--- a/web/index.html
+++ b/web/index.html
@@ -5,16 +5,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="scaffolded-by" content="https://github.com/dart-lang/stagehand">
-    <title>dart_demo_livescore</title>
+    <meta name="scaffolded-by" content="https://github.com/dart-lang/sdk">
+    <title>Live Sports Scores Demo</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="favicon.ico">
     <script defer src="main.dart.js"></script>
 </head>
 
 <body>
   <table id="matches">
-    <caption>Football Champions League Livescores</caption>
+    <caption>Live Sports Scores Demo</caption>
     <thead>
       <th>Home</th>
       <th colspan="3">score</th>
